@@ -1,10 +1,16 @@
-ES_CLASSPATH=$ES_CLASSPATH:$ES_HOME/lib/elasticsearch-@ES_VERSION@.jar:$ES_HOME/lib/*:$ES_HOME/lib/sigar/*
+#!/bin/sh
+
+ES_CLASSPATH=$ES_CLASSPATH:$ES_HOME/lib/${project.build.finalName}.jar:$ES_HOME/lib/*:$ES_HOME/lib/sigar/*
 
 if [ "x$ES_MIN_MEM" = "x" ]; then
     ES_MIN_MEM=256m
 fi
 if [ "x$ES_MAX_MEM" = "x" ]; then
     ES_MAX_MEM=1g
+fi
+if [ "x$ES_HEAP_SIZE" != "x" ]; then
+    ES_MIN_MEM=$ES_HEAP_SIZE
+    ES_MAX_MEM=$ES_HEAP_SIZE
 fi
 
 # min and max heap sizes should be set to the same value to avoid
@@ -14,26 +20,33 @@ fi
 JAVA_OPTS="$JAVA_OPTS -Xms${ES_MIN_MEM}"
 JAVA_OPTS="$JAVA_OPTS -Xmx${ES_MAX_MEM}"
 
+# new generation
+if [ "x$ES_HEAP_NEWSIZE" != "x" ]; then
+    JAVA_OPTS="$JAVA_OPTS -Xmn${ES_HEAP_NEWSIZE}"
+fi
+
+# max direct memory
+if [ "x$ES_DIRECT_SIZE" != "x" ]; then
+    JAVA_OPTS="$JAVA_OPTS -XX:MaxDirectMemorySize=${ES_DIRECT_SIZE}"
+fi
+
 # reduce the per-thread stack size
-JAVA_OPTS="$JAVA_OPTS -Xss128k"
+JAVA_OPTS="$JAVA_OPTS -Xss256k"
 
-JAVA_OPTS="$JAVA_OPTS -Djline.enabled=true"
+# set to headless, just in case
+JAVA_OPTS="$JAVA_OPTS -Djava.awt.headless=true"
 
-# Enable aggressive optimizations in the JVM
-#    - Disabled by default as it might cause the JVM to crash
-# JAVA_OPTS="$JAVA_OPTS -XX:+AggressiveOpts"
-
-# Enable reference compression, reducing memory overhead on 64bit JVMs
-#    - Disabled by default as it is not stable for Sun JVM before 6u19
-#JAVA_OPTS="$JAVA_OPTS -XX:+UseCompressedOops"
+# Force the JVM to use IPv4 stack
+# JAVA_OPTS="$JAVA_OPTS -Djava.net.preferIPv4Stack=true"
 
 JAVA_OPTS="$JAVA_OPTS -XX:+UseParNewGC"
 JAVA_OPTS="$JAVA_OPTS -XX:+UseConcMarkSweepGC"
-JAVA_OPTS="$JAVA_OPTS -XX:+CMSParallelRemarkEnabled"
-JAVA_OPTS="$JAVA_OPTS -XX:SurvivorRatio=8"
-JAVA_OPTS="$JAVA_OPTS -XX:MaxTenuringThreshold=1"
+
 JAVA_OPTS="$JAVA_OPTS -XX:CMSInitiatingOccupancyFraction=75"
 JAVA_OPTS="$JAVA_OPTS -XX:+UseCMSInitiatingOccupancyOnly"
+
+# When running under Java 7
+#JAVA_OPTS="$JAVA_OPTS -XX:+UseCondCardMark"
 
 # GC logging options -- uncomment to enable
 # JAVA_OPTS="$JAVA_OPTS -XX:+PrintGCDetails"
